# czcmusic

./: CMakeLists.txt  CurrentList.qml  CurrentListBtn.qml  DesktopLrc.qml  FileD.qml  FolderD.qml  FolderListBtn.qml  Footerwindow.qml  FunctionalButton.qml  LoadPage.qml  LoadPageBtn.qml  LocaMusicPage.qml  LyrEditing.qml  Mediaplayer.qml  MusicControlBtn.qml  MusicRoundButton.qml  MyLikeList.qml  NavBarBtn.qml  NavigationBar.qml  PlaySlider.qml  PlaySlider.qml.autosave  README.md  RecentPlayPage.qml  RecentPlayPageBtn.qml  SearchPage.qml  SearchPageBtn.qml  SearchRect.qml  SongList.qml  TitleBar.qml  VolumeControlDlg.qml  VolumnControl.qml  audio.cpp  audio.h  audioplay.cpp  audioplay.h  ccmusic.pro  database.cpp  database.h  datainitialization.cpp  datainitialization.h  (+19 more)
